Fixed text spilling over when resizing the window

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -35,7 +35,8 @@ h4 > a:hover{
 
 img{
 	margin: 1rem;
-	max-width: 15rem;
+	max-width: 13rem;
+	height: auto;
 }
 
 p a{
